name:                wavefront-obj
version:             0.1.0.1
synopsis:            Wavefront .obj file loader
description:         See <https://github.com/SASinestro/wavefront-obj/blob/master/README.md>.
homepage:            https://github.com/sasinestro/wavefront-obj#readme
license:             BSD3
license-file:        LICENSE
author:              Alexis Williams
maintainer:          sasinestro@gmail.com
copyright:           Copyright: (c) 2016 Alexis Williams
category:            Graphics
build-type:          Simple
extra-source-files:  test/african_head.obj
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Data.WavefrontObj
    other-modules:      Data.WavefrontObj.Types
                      , Data.WavefrontObj.Parsers
    build-depends:      base         >= 4.7       && < 5
                      , containers   >= 0.5.5.1   && < 0.6
                      , text         >= 1.2.0.6   && < 1.3
                      , transformers >= 0.3.0.0   && < 0.6
                      , attoparsec   >= 0.12.1.5  && < 0.14
                      , linear       >= 1.19.1.3  && < 1.21
    default-language:   Haskell2010

test-suite wavefront-obj-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:      base
                      , linear
                      , wavefront-obj
                      , hspec         >= 2.1.5 && < 2.5 
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

source-repository head
    type:     git
    location: https://github.com/sasinestro/wavefront-obj
